Fixed blog logo cropping circle

--- a/blog/main.css
+++ b/blog/main.css
@@ -33,7 +33,6 @@ a {
     }
     
     .header img {
-        border-radius: 1000px;
         width: 160px;
         height: 160px;
     }
@@ -213,7 +212,6 @@ a {
     }
 
         .footer img {
-            border-radius: 1000px;
             width: 100px;
             height: 100px;
         }
